# hello_serverless_rust

./: .gitignore  Cargo.toml  README.md  deploy.sh  main.rs  run.sh  template.yml
events/: input.json
src/: main.rs
src/dtos/: request.rs  response.rs
src/errors/: mod.rs  string_error.rs
