[package]
name = "serverless_hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.4.1"
log = "0.4.14"
serde = "1.0.130"
simple_logger = "1.13.0"
tokio = "1.12.0"
